fixed the white space and did small adjustements

--- a/2022/style/style.css
+++ b/2022/style/style.css
@@ -104,7 +104,7 @@ body {
   display: flex;
   top: 50%;
   transform: translateY(-50%);
-  height: 5vh;
+  height: 3em;
   left: 3vh;
 }
 
@@ -119,7 +119,7 @@ body {
 
 #s1 {
           vertical-align: middle;
-          width: 80vw;
+          width: 70vw;
           padding-top: 10vh;
         }
 
@@ -141,7 +141,8 @@ body {
 }
 
 .section {
-  padding: 10vw;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
 .recruitment video {
@@ -160,6 +161,7 @@ body {
   vertical-align: middle;
   font-size: 1em;
   line-height: 1.6em;
+  padding-bottom: 10vh;
 }
 
 .content h2 {
